--- a/clientes/administracion.html
+++ b/clientes/administracion.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <div class="container">
+  <div class="container"><br>
     <h1>Administracion de Clientes</h1>
     <table class="table table-striped">
       <thead>
